--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/d3-axis": "^1.0.12",
+    "@types/d3-format": "^1.3.1",
+    "@types/d3-scale": "^2.2.0",
+    "@types/d3-selection": "^1.4.1",
+    "@types/d3-transition": "^1.1.6",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
+    "d3-axis": "^1.0.12",
+    "d3-format": "^1.4.4",
+    "d3-scale": "^3.2.1",
+    "d3-selection": "^1.4.1",
+    "d3-shape": "^1.3.7",
+    "d3-transition": "^1.3.2",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-timeago": "^4.4.0",
+    "swr": "^0.2.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -42,8 +57,11 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-array": "^2.0.0",
+    "@types/d3-shape": "^1.3.2",
     "@types/express": "^4.17.6",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-timeago": "^4.1.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^7.0.5",
