--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "d3-shape": "^1.3.7",
     "d3-transition": "^1.3.2",
     "express": "^4.17.1",
+    "idb-keyval": "^3.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-timeago": "^4.4.0",
+    "react-use": "^15.3.2",
     "swr": "^0.2.3",
     "typescript": "~3.7.2"
   },
