--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "idb-keyval": "^3.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader": "^2.4.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-timeago": "^4.4.0",
@@ -62,6 +63,7 @@
     "@types/d3-array": "^2.0.0",
     "@types/d3-shape": "^1.3.2",
     "@types/express": "^4.17.6",
+    "@types/react-loader": "^2.4.4",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-timeago": "^4.1.1",
     "nodemon": "^2.0.4",
