--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
-    "outDir": "server-build",
-    "module": "commonjs",
     "target": "es5",
-    "lib": ["es2017", "dom"],
-    "sourceMap": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "jsx": "react",
-    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "outDir": "server-build",
+    "noEmit": false
   },
-  "exclude": ["node_modules", "build", "src"]
+  "include": ["server"]
 }
