--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "3.4.1",
     "react-timeago": "^4.4.0",
     "react-use": "^15.3.2",
+    "serialize-javascript": "^4.0.0",
     "swr": "^0.2.3",
     "typescript": "~3.7.2"
   },
@@ -66,6 +67,7 @@
     "@types/react-loader": "^2.4.4",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-timeago": "^4.1.1",
+    "@types/serialize-javascript": "^1.5.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^7.0.5",
