--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.28",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "@testing-library/user-event": "^12.0.11",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-format": "^1.3.1",
     "@types/d3-scale": "^2.2.0",
@@ -44,7 +44,9 @@
     "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
     "dev:run": "nodemon ./server-build/index.js",
     "predev": "run-s build",
-    "dev": "run-p dev:*"
+    "dev": "run-p dev:*",
+    "preprod": "run-s build",
+    "prod": "NODE_ENV=production webpack --config webpack.server.js --mode=production"
   },
   "eslintConfig": {
     "extends": "react-app"
