--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@artsy/fresnel": "^1.2.0",
     "@emotion/core": "^10.0.28",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
