--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "idb-keyval": "^3.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-loader": "^2.4.7",
+    "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-timeago": "^4.4.0",
@@ -73,6 +73,7 @@
     "@types/d3-shape": "^1.3.2",
     "@types/express": "^4.17.6",
     "@types/react-loader": "^2.4.4",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-timeago": "^4.1.1",
     "@types/serialize-javascript": "^1.5.0",
